fixed alignment

--- a/src/components/Board/index.css
+++ b/src/components/Board/index.css
@@ -3,8 +3,9 @@
     height: 90%;
     aspect-ratio: 1 / 1;
     border: 1px solid green;
-    display: flex;
 }
 .row {
+    height: 10%;
     width: 100%;
+    display: flex;
 }
