--- a/src/components/Cell/index.css
+++ b/src/components/Cell/index.css
@@ -1,5 +1,6 @@
 .cell {
-    height: 10%;
+    height: 100%;
+    width: 10%;
     border: 1px solid grey;
 }
 .not-active {
